--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 TODO
 
 • Timeline:                                                                     (21.5 h - 0.5 h)
-   ◦ TODO: Améliorer l’architecture des systèmes                                (2 h)
    ◦ DONE: Faire un `PositionComponent` au lieu de l’héritage à `sf::Transformable`
       → DONE: Solution alternative: Ajouter le `sf::Transformable` en composant   (20 min)
    ◦ TODO: Intégrer le code de Dylan pour la GUI                                (2 h)
@@ -9,6 +8,8 @@ TODO
    ◦ TODO: Rajouter des types d’ennemis, de bullets, un boss, ...               (4 h)
    ◦ TODO: Finir d’améliorer l’architecure réseau                               (2 h)
    ◦ TODO: Faire le système de lobby et le rajouter sur le PPT                  (8 h)
+   ◦ TODO: Améliorer l’architecture des systèmes                                (2 h)
+      → TODO: Rajouter DrawingSystem dans la Scene au lieu de l’appeller direct
 
 • WIP: Amélioration d’architecture
    ◦ DONE: Transformer /engine en lib pour éviter de recompiler 2 fois tous les fichiers
@@ -16,7 +17,7 @@ TODO
    ◦ DONE: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
    ◦ DONE: Virer `Application` et créer une classe statique `Config` avec les dimensions de l’écran
    ◦ DONE: Renommer /graphics/characters en /graphics/spaceship et /graphics/bullets en /graphics/bullet
-   ◦ TODO: Virer la dépendance à la partie multimédia de la SFML pour le serveur
+   ◦ DONE: Virer la dépendance à la partie multimédia de la SFML pour le serveur
       → `Problèmes:` `DrawingSystem` est dans `SceneSystem` et `sf::Transformable` est défini dans la partie graphique de la sfml
          → Solutions: Créer des vraies classes pour les systèmes et un conteneur de systèmes dans `Scene` qui remplacerait `SceneSystem`
                       Créer un `PositionComponent` qui remplacerait l’utilisation de `sf::Transformable` (qui serait utilisée par `Image` à la place)
@@ -78,7 +79,11 @@ TODO
       ◦ DONE: Victory/Game over screen
       ◦ TODO: Text Box class
       ◦ TODO: Lobby screen
-   ◦ TODO: Check if game compiles and works on Windows
+      ◦ TODO: Assets improvements
+   ◦ WIP: Check if game compiles and works on Windows
+      ◦ DONE: Try to cross-compile and run with Wine
+      ◦ TODO: Try to run cross-compilated executable on Windows
+      ◦ TODO: Try to compile on Windows
 • WIP: Review
    ◦ WIP: Mettre en avant les features de l’engine
       → DONE: Framerate independent
