--- a/TODO
+++ b/TODO
@@ -1,15 +1,17 @@
 TODO
 
-• Timeline:                                                                     (21.5 h - 0.5 h)
+• Timeline:                                                                     (19 h)
    ◦ DONE: Faire un `PositionComponent` au lieu de l’héritage à `sf::Transformable`
       → DONE: Solution alternative: Ajouter le `sf::Transformable` en composant   (20 min)
-   ◦ TODO: Intégrer le code de Dylan pour la GUI                                (2 h)
+   ◦ DONE: Intégrer le code de Dylan pour la GUI                                (2 h)
    ◦ TODO: Faire le système de gestion dynamique des entités + PPT              (3 h)
    ◦ TODO: Rajouter des types d’ennemis, de bullets, un boss, ...               (4 h)
    ◦ TODO: Finir d’améliorer l’architecure réseau                               (2 h)
    ◦ TODO: Faire le système de lobby et le rajouter sur le PPT                  (8 h)
    ◦ TODO: Améliorer l’architecture des systèmes                                (2 h)
       → TODO: Rajouter DrawingSystem dans la Scene au lieu de l’appeller direct
+
+*NE PAS OUBLIER DE FAKE LES HEADERS!!!!!!!!!!!!!!!!*
 
 • WIP: Amélioration d’architecture
    ◦ DONE: Transformer /engine en lib pour éviter de recompiler 2 fois tous les fichiers
@@ -37,14 +39,14 @@ TODO
    ◦ DONE: During network lag spikes, entities are not correctly deleted/spawned
       → Use TCP to send spawn/die events
    ◦ DONE: Find a way to fix error message at server close “Can’t find client with id”
+   ◦ TODO: *MANDATORY:* Alive entities are not sent to new clients
    ◦ TODO: Find a way to fix exception “Listen failed”
-   ◦ TODO: Alive entities are not sent to new clients
 • TODO: Other issues
    ◦ TODO: /LOW/ Faster bullets when spamming shoot button instead of holding it, wtf?
 • TODO: Documentation
-   ◦ TODO: Binary protocol (RFC, ascii format, printed)
-   ◦ TODO: UML class + sequence diagram (printed)
-   ◦ TODO: Doxygen (optional)
+   ◦ TODO: *MANDATORY:* Binary protocol (RFC, ascii format, printed)
+   ◦ TODO: *MANDATORY:* UML class + sequence diagram (printed)
+   ◦ TODO: *MANDATORY:* Doxygen (optional)
 • WIP: Game
    ◦ WIP: Network
       ◦ WIP: Server
@@ -77,9 +79,9 @@ TODO
       ◦ DONE: Title screen
       ◦ DONE: Pause menu
       ◦ DONE: Victory/Game over screen
-      ◦ TODO: Text Box class
+      ◦ DONE: Text Box class
+      ◦ DONE: Assets improvements
       ◦ TODO: Lobby screen
-      ◦ TODO: Assets improvements
    ◦ WIP: Check if game compiles and works on Windows
       ◦ DONE: Try to cross-compile and run with Wine
       ◦ TODO: Try to run cross-compilated executable on Windows
