--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ TODO
       → DONE: Solution alternative: Ajouter le `sf::Transformable` en composant   (20 min)
    ◦ DONE: Intégrer le code de Dylan pour la GUI                                (2 h)
    ◦ TODO: Faire le système de gestion dynamique des entités + PPT              (3 h)
-   ◦ TODO: Rajouter des types d’ennemis, de bullets, un boss, ...               (4 h)
+   ◦ TODO: Rajouter un score, des types d’ennemis, de bullets, un boss, ...     (4 h)
    ◦ TODO: Finir d’améliorer l’architecure réseau                               (2 h)
    ◦ TODO: Faire le système de lobby et le rajouter sur le PPT                  (8 h)
    ◦ TODO: Améliorer l’architecture des systèmes                                (2 h)
@@ -76,7 +76,7 @@ TODO
       ◦ TODO: Die animation
    ◦ DONE: Background
       ◦ DONE: Slow horizontal scrolling background
-      ◦ DONE: Stop or loop when the scrolling ends
+      ◦ DONE: Stop when the scrolling ends
    ◦ WIP: GUI → Dylan
       ◦ DONE: Button class
       ◦ DONE: Title screen
