[AudioPlayer] 'playSound()' function added.

--- a/TODO
+++ b/TODO
@@ -43,6 +43,7 @@ TODO
    ◦ DONE: Find a way to fix error message at server close “Can’t find client with id”
    ◦ DONE: Put a timeout on connect and a “Connecting...” message
    ◦ TODO: Check if client close works as intended (test closing player 0 before 1, then the opposite)
+      → When closing Player 0 first, Player 1 stays inactive, maybe he’s dead but he didn’t got the info
    ◦ TODO: Can’t join the server again if I leave (maybe close sockets when I’m out of GameState)
    ◦ TODO: Find a way to fix exception “Listen failed”
 • TODO: Other issues
