--- a/TODO
+++ b/TODO
@@ -11,6 +11,13 @@ TODO
    ◦ TODO: Améliorer l’architecture des systèmes                                (2 h)
       → TODO: Rajouter DrawingSystem dans la Scene au lieu de l’appeller direct
 
+Notes:
+   ◦ Quand je ferme avec Win+Shift+A
+      → Le serveur se ferme et impossible de le relancer instantanément
+   ◦ DONE: Quand je meurs dans le jeu
+      → `Cas 1:` Le serveur m’envoie que je suis mort et l’écran de GameOver s’affiche
+      → `Cas 2:` Le serveur ne m’envoie pas que je suis mort, mon perso reste affiché et tout est bloqué
+
 *NE PAS OUBLIER LES HEADERS!!!!!!!!!!!!!!!!*
 *Commande:* `sed -i '/Created/,+1d' fichier`
 
@@ -43,10 +50,13 @@ TODO
    ◦ DONE: Alive entities are not sent to new clients
    ◦ DONE: Find a way to fix error message at server close “Can’t find client with id”
    ◦ DONE: Put a timeout on connect and a “Connecting...” message
+   ◦ TODO: When a enemy is killed by the player, its death message is sent way too much times
+      → But when they’re out of the screen they’re killed properly
+      → Maybe it’s just because the bullets are still touching it, but wtf?
    ◦ TODO: When you connect to an empty server that has been already used, the timeout doesn’t work
       → While lobby system isn’t implemented try to close server when there is no clients playing
    ◦ TODO: Check if client close works as intended (test closing player 0 before 1, then the opposite)
-      → When closing Player 0 first, Player 1 stays inactive, maybe he’s dead but he didn’t got the info
+      → DONE: When closing Player 0 first, Player 1 stays inactive, maybe he’s dead but he didn’t got the info
          → Also happens in single player mode???
    ◦ TODO: Can’t join the server again if I leave (maybe close sockets when I’m out of GameState)
    ◦ TODO: Find a way to fix exception “Listen failed”
