[ServerInfo] Not a singleton anymore. [GamePadController|NetworkController] Moved to server/ folder.

--- a/TODO
+++ b/TODO
@@ -3,12 +3,15 @@ TODO
 # High priority
 
 • TODO: *MANDATORY:* Change player color and initial position relatively to client ID
-• TODO: Add a script `pack_for_windows.sh` which will pack executables, resources and dlls
-• TODO: Add an AUR package, just for fun
 • TODO: Test on LAN, then on the Internet
 
 • TODO: *NE PAS OUBLIER LES HEADERS ET LES FIXME!!!!!!!!!!!!!!!!*
    → *Commande:* `sed -i '/Created/,+1d' fichier`
+
+# Low priority
+
+• TODO: Add a script `pack_for_windows.sh` which will pack executables, resources and dlls
+• TODO: Add an AUR package, just for fun
 
 # Others
 
@@ -56,9 +59,10 @@ Notes:
       ◦ DONE: `EnemyInfoLoader` et `EnemyInfo` devraient aller dans /game
       ◦ DONE: `NetworkController` devrait aller dans /game
    ◦ DONE: Virer `Network`
-   ◦ TODO: `ServerInfo` ne devrait pas être un singleton
-      → Il est utilisé par `ServerApplication`, `Server` et `NetworkController`
-   ◦ TODO: Render `ResourceHandler` thread safe
+   ◦ DONE: `ServerInfo` ne devrait pas être un singleton
+      → Il est utilisé par `Server` et `NetworkController`
+      → Le déplacer vers le dossier du serveur
+   ◦ TODO: Rendre `ResourceHandler` thread safe
    ◦ TODO: Faire un dossier /resources pour les ressources
       ◦ TODO: Déplacer /audio /fonts et /graphics dans /resources
       ◦ TODO: Déplacer /data/config dans /resources
