--- a/TODO
+++ b/TODO
@@ -3,7 +3,13 @@ TODO
 # High priority
 
 • TODO: *MANDATORY:* Change player color and initial position relatively to client ID
+• TODO: *MANDATORY:* Limit game to 4 players
+• TODO: *MANDATORY:* Add a HUD with score + health + time
 • TODO: Test on LAN, then on the Internet
+   ◦ TODO: Try to find a solution for packet loss/order
+      → An easy fix: A component in entities which stores the last packet timestamp they used
+                     for update. That way they shouldn’t accept older packets. (Same for keys?)
+• TODO: Find why Windows + Linux has bugs (Windows + Windows and Linux + Linux are fine)
 
 • TODO: *NE PAS OUBLIER LES HEADERS ET LES FIXME!!!!!!!!!!!!!!!!*
    → *Commande:* `sed -i '/Created/,+1d' fichier`
@@ -23,8 +29,10 @@ TODO
    ◦ DONE: Améliorer l’architecture des systèmes
       → DONE: Rajouter DrawingSystem dans la Scene au lieu de l’appeller direct
    ◦ TODO: Faire le système de gestion dynamique des ennemis + PPT
+      ◦ TODO: Faire un exemple minimal avec le boss
    ◦ TODO: Rajouter un score, des types d’ennemis, de bullets, un boss, ...
    ◦ TODO: Faire le système de lobby et le rajouter sur le PPT
+      ◦ TODO: Faire un exemple minimal sans GUI (en gros le serveur s’occupe de tout)
 
 Notes:
    ◦ DONE: Quand je ferme avec Win+Shift+A
